# my-forum

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: architecture-principles.md  known-issues.md  npc-characters.md  operating-principles.md  product-brief.md  roadmap.md  scenario-architecture.md  tech-stack.md  technical-design.md  ui-design.md
examples/: seed-cases.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql  002_workspace_background.sql  003_skill.sql  004_chat_characters.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/chat/: ChatHeader.tsx  ChatSettings.tsx  ChatView.tsx  ChoiceCard.tsx  EmptyState.tsx  InputArea.tsx  MessageList.tsx  NPCMessage.tsx  Sidebar.tsx  TypingIndicator.tsx  UserMessage.tsx
src/components/settings/: CharacterManager.tsx  SettingsPanel.tsx  SkillManager.tsx
src/engine/: discussion.ts  index.ts  prompts.ts
src/engine/__tests__/: discussion.test.ts  prompts.test.ts
src/lib/: characters.ts  images.ts
src/llm/: claude.ts  factory.ts  index.ts  openai.ts  presets.ts  provider.ts
src/scenarios/__tests__/: registry.test.ts
src/scenarios/pm-discussion/: characters.ts  index.ts  skills.ts
src/store/: appStore.ts  chatStore.ts  database.ts
src/types/: index.ts
tests/acceptance/: test-cases.md
